// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display custom seperator  1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
    class="css-0"
    data-chakra-component="CBreadcrumb"
  >
    <ol
      class="css-0"
      data-chakra-component="CBox"
    >
      <li
        class="css-18biwo"
        data-chakra-component="CBreadcrumbItem"
      >
        <a
          class="css-0 css-19ysyim"
          data-chakra-component="CBreadcrumbLink"
          href="/"
        >
          Home
        </a>
        <span
          class="css-dp0f2t"
          data-chakra-component="CBreadcrumbSeparator"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="css-18biwo"
        data-chakra-component="CBreadcrumbItem"
      >
        <a
          class="css-0 css-19ysyim"
          data-chakra-component="CBreadcrumbLink"
          href="/about"
        >
          About
        </a>
        <span
          class="css-dp0f2t"
          data-chakra-component="CBreadcrumbSeparator"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="css-18biwo"
        data-chakra-component="CBreadcrumbItem"
      >
        <span
          aria-current="page"
          class="css-0"
          data-chakra-component="CBreadcrumbLink"
          href="/contact"
        >
          Contact
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-label="breadcrumb"
      class="css-0"
      data-chakra-component="CBreadcrumb"
    >
      <ol
        class="css-0"
        data-chakra-component="CBox"
      >
        <li
          class="css-18biwo"
          data-chakra-component="CBreadcrumbItem"
        >
          <a
            class="css-0 css-19ysyim"
            data-chakra-component="CBreadcrumbLink"
            href="#"
          >
            Breadcrumb 1
          </a>
          <span
            class="css-6eovvf"
            data-chakra-component="CBreadcrumbSeparator"
            role="presentation"
          >
            /
          </span>
        </li>
        <li
          class="css-18biwo"
          data-chakra-component="CBreadcrumbItem"
        >
          <a
            class="css-0 css-19ysyim"
            data-chakra-component="CBreadcrumbLink"
            href="#"
          >
            Breadcrumb 2
          </a>
          <span
            class="css-1hgjpgb"
            data-chakra-component="CBreadcrumbSeparator"
            role="presentation"
          >
            /
          </span>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
